feat: exposing 8080, compose files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,8 +4,7 @@ services:
          POSTGRES_USER: ${DB_USER}
          POSTGRES_PASSWORD: ${DB_PASSWORD}
          POSTGRES_DB: ${DB_NAME}
-         POSTGRES_HOST: ${DB_HOST}
-         POSTGRES_PORT: ${DB_PORT}
+      env_file: .env
 
    app:
       environment:
@@ -14,3 +13,6 @@ services:
          DB_NAME: ${DB_NAME}
          DB_HOST: ${DB_HOST}
          DB_PORT: ${DB_PORT}
+      env_file: .env
+      ports:
+         - '8080:8080'
