--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,8 @@ services:
       image: postgres:latest
       volumes:
          - db_data:/var/lib/postgresql/data
-      env_file:
-         - .env
       healthcheck:
-         test: ['CMD-SHELL', 'pg_isready -U postgres']
+         test: ['CMD-SHELL', 'pg_isready -U ${DB_USER}']
          interval: 10s
          timeout: 5s
          retries: 5
