--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Login ke Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.porosteam7 }}
-          password: ${{ secrets.Sayasukaayamgeprek12 }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & Push Docker Image
         uses: docker/build-push-action@v5
