--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,25 @@
 services:
    db:
+      image: postgres:latest
+      volumes:
+         - db_data:/var/lib/postgresql/data
       environment:
          POSTGRES_USER: ${DB_USER}
          POSTGRES_PASSWORD: ${DB_PASSWORD}
          POSTGRES_DB: ${DB_NAME}
       env_file: .env
+      healthcheck:
+         test: ['CMD-SHELL', 'pg_isready -U ${DB_USER}']
+         interval: 10s
+         timeout: 5s
+         retries: 5
 
    app:
+      image: porosteam7/poros-final-team7:latest
+      depends_on:
+         - db
+      volumes:
+         - app_data:/app/data
       environment:
          DB_USER: ${DB_USER}
          DB_PASSWORD: ${DB_PASSWORD}
@@ -14,5 +27,14 @@ services:
          DB_HOST: ${DB_HOST}
          DB_PORT: ${DB_PORT}
       env_file: .env
+      healthcheck:
+         test: ['CMD-SHELL', 'curl -f http://localhost:8080/health || exit 1']
+         interval: 30s
+         timeout: 10s
+         retries: 3
       ports:
          - '8080:8080'
+
+volumes:
+   db_data:
+   app_data:
