--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,7 +17,8 @@ services:
    app:
       image: porosteam7/poros-final-team7:latest
       depends_on:
-         - db
+         db:
+            condition: service_healthy
       volumes:
          - app_data:/app/data
       environment:
